# glucotray

./: .gitignore  .gitleaksignore  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: create-issue.yml  release.yml  review.yml  tauri-build.yml
Changelog/: v0.0.1.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.2.9.md
GlucoTray/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
GlucoTray/src/: app.css
GlucoTray/src-tauri/: Cargo.toml  tauri.conf.json
GlucoTray/src-tauri/src/: db.rs  dexcom.rs  error.rs  keychain.rs  lib.rs  main.rs  state.rs  tray.rs  worker.rs
GlucoTray/src/lib/: app.ts  theme.ts
GlucoTray/src/lib/components/: Disclaimer.svelte  PrivacyPolicy.svelte  Settings.svelte  TermsOfUse.svelte  WizardStep0.svelte  WizardStep1.svelte  WizardStep2.svelte  WizardStep3.svelte  WizardStep4.svelte  WizardStep5.svelte
GlucoTray/src/lib/i18n/: de.json  en.json  index.ts  jp.json
GlucoTray/src/lib/styles/: app.css  wizard.css
GlucoTray/src/routes/: +layout.svelte  +page.svelte
docs/: CONTRIBUTING.md  claude-übergabe.md  cliff.toml  handoff.md  issues.md  project-plan.md  project-status.md  projekt-plan-de.md  store-disclaimer.md
docs/legal/: disclaimer.de.md  disclaimer.en.md  disclaimer.jp.md  privacy-policy.de.md  privacy-policy.en.md  privacy-policy.jp.md  terms-of-use.de.md  terms-of-use.en.md  terms-of-use.jp.md
